# Misc_Projects

./: Crypto.cpp  Plain_txt.txt
CheatingHangman/: CMakeLists.txt  CheatingHangman.cpp  CheatingHangman.h  main.cpp  word.txt
Notacto/: CMakeLists.txt  main.cpp  notacto.cpp  notacto.h
ShoppingCart/: CMakeLists.txt  DeathSticks.cpp  DeathSticks.h  Items.cpp  Items.h  Jabajuice.cpp  Jabajuice.h  Naboofruit.cpp  Naboofruit.h  Porg.cpp  Porg.h  Portionbread.cpp  Portionbread.h  ShoppingCart.cpp  ShoppingCart.h  Weighted.cpp  Weighted.h  main.cpp
SimpleSteganography/: CMakeLists.txt  main.cpp  payload.txt
TicTacToe/: Board.cpp  Board.h  CMakeLists.txt  Move.cpp  Move.h  main.cpp
TrunctablePrime/: CMakeLists.txt  main.cpp
VigenereCipher/: CMakeLists.txt  Crypto.h  Letter.cpp  Letter.h  main.cpp
WarGame/: CMakeLists.txt  Card.cpp  Card.h  War.cpp  War.h  main.cpp
